Added customizable hotkeys with json saving, general code refactorings

--- a/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
+++ b/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
@@ -293,6 +293,27 @@
     1.050000,
     "1337420"
   ],
+  "-685276541": [
+    0.140000,
+    0.600000,
+    9.800000,
+    0.600000,
+    0.140000,
+    1.550000,
+    1.900000,
+    0.480000,
+    1.300000,
+    1.300000,
+    120.000008,
+    1.000000,
+    1.500000,
+    0.240000,
+    0.250000,
+    0.000000,
+    1.000000,
+    0.600000,
+    "80DGN226"
+  ],
   "-768044142": [
     0.216850,
     0.500000,
@@ -440,6 +461,27 @@
     0.920000,
     "1337420"
   ],
+  "1069929536": [
+    0.180000,
+    0.800000,
+    9.800000,
+    0.600000,
+    0.180000,
+    1.750000,
+    1.950000,
+    0.480000,
+    1.300000,
+    1.300000,
+    130.000015,
+    1.000000,
+    1.500000,
+    0.240000,
+    0.250000,
+    0.000000,
+    0.800000,
+    0.850000,
+    "27CVS138"
+  ],
   "1076201208": [
     0.328800,
     0.780000,
@@ -523,6 +565,27 @@
     1.000000,
     0.600000,
     "64QZE962"
+  ],
+  "1265391242": [
+    0.315000,
+    1.400000,
+    11.760000,
+    1.650000,
+    0.315000,
+    2.290000,
+    2.300000,
+    0.450000,
+    2.000000,
+    3.000000,
+    152.000000,
+    0.500000,
+    1.500000,
+    0.200000,
+    0.200000,
+    0.000000,
+    0.800000,
+    0.850000,
+    "02NYI797"
   ],
   "1304459735": [
     0.333750,
