added sessantashit to updatable globals and baseGlobals table

--- a/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
+++ b/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
@@ -20,6 +20,27 @@
     0.850000,
     "88XYL717"
   ],
+  "-1168952148": [
+    0.320000,
+    0.800000,
+    9.800000,
+    0.320000,
+    0.320000,
+    2.000000,
+    2.300000,
+    0.500000,
+    5.800000,
+    5.800000,
+    155.000000,
+    1.000000,
+    1.500000,
+    0.200000,
+    0.200000,
+    0.400000,
+    0.800000,
+    0.900000,
+    "46VBA527"
+  ],
   "-120287622": [
     0.130000,
     0.250000,
@@ -104,6 +125,27 @@
     1.200000,
     "MC70NY"
   ],
+  "-1532697517": [
+    0.300000,
+    0.300000,
+    11.760000,
+    0.400000,
+    0.250000,
+    1.800000,
+    2.050000,
+    0.510000,
+    4.300000,
+    4.300000,
+    135.000000,
+    1.100000,
+    1.500000,
+    0.420000,
+    0.420000,
+    0.500000,
+    0.150000,
+    1.000000,
+    "09RFE233"
+  ],
   "-1566741232": [
     0.300000,
     0.800000,
@@ -187,6 +229,27 @@
     1.000000,
     0.800000,
     "61PHT965"
+  ],
+  "-1756021720": [
+    0.295000,
+    0.300000,
+    11.760000,
+    0.400000,
+    0.295000,
+    1.800000,
+    2.050000,
+    0.510000,
+    4.300000,
+    4.300000,
+    136.000000,
+    1.100000,
+    1.500000,
+    0.460000,
+    0.480000,
+    0.500000,
+    0.150000,
+    1.175000,
+    "24XQJ589"
   ],
   "-1890996696": [
     0.337500,
@@ -649,6 +712,27 @@
     1.000000,
     0.500000,
     "21YSC560"
+  ],
+  "1352136073": [
+    0.341000,
+    1.120000,
+    9.800000,
+    0.500000,
+    0.310000,
+    2.500000,
+    2.650000,
+    0.480000,
+    9.000000,
+    9.000000,
+    159.000000,
+    0.700000,
+    1.500000,
+    0.240000,
+    0.240000,
+    0.000000,
+    1.000000,
+    0.925000,
+    "80YCW866"
   ],
   "1373123368": [
     0.245000,
