added one model hash for a resupply vehicle event in freemode

--- a/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
+++ b/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
@@ -125,6 +125,27 @@
     1.200000,
     "MC70NY"
   ],
+  "-1361687965": [
+    0.210000,
+    0.600000,
+    9.800000,
+    0.800000,
+    0.210000,
+    1.850000,
+    2.070000,
+    0.500000,
+    1.900000,
+    1.900000,
+    130.000015,
+    0.700000,
+    1.500000,
+    0.200000,
+    0.200000,
+    0.000000,
+    1.000000,
+    1.000000,
+    "61MQV956"
+  ],
   "-1532697517": [
     0.300000,
     0.300000,
