added String search to globalscanner.lua, improved typehandling in general, more refactorings

--- a/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
+++ b/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
@@ -314,6 +314,27 @@
     0.820000,
     "28GFU758"
   ],
+  "-1983622024": [
+    0.112000,
+    3.100000,
+    9.800000,
+    0.900000,
+    0.112000,
+    2.010000,
+    2.050000,
+    0.430000,
+    2.000000,
+    2.000000,
+    75.000000,
+    0.500000,
+    1.500000,
+    0.000000,
+    0.000000,
+    0.000000,
+    0.200000,
+    7.500000,
+    "63WFL355"
+  ],
   "-2096690334": [
     0.310000,
     0.600000,
