added podiumVehicle reset logic, added more models, removed cumbersome trollLoops submenu

--- a/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
+++ b/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
@@ -146,6 +146,27 @@
     1.000000,
     "61MQV956"
   ],
+  "-1479664699": [
+    0.280000,
+    0.880000,
+    11.760000,
+    0.450000,
+    0.280000,
+    1.800000,
+    1.920000,
+    0.492000,
+    2.000000,
+    2.000000,
+    140.000000,
+    1.000000,
+    1.400000,
+    0.290000,
+    0.260000,
+    0.000000,
+    0.000000,
+    0.800000,
+    "40AST246"
+  ],
   "-1532697517": [
     0.300000,
     0.300000,
@@ -356,6 +377,48 @@
     1.050000,
     "20XTQ388"
   ],
+  "-391594584": [
+    0.240000,
+    0.900000,
+    9.800000,
+    0.600000,
+    0.240000,
+    2.350000,
+    2.550000,
+    0.485000,
+    2.000000,
+    2.000000,
+    145.000000,
+    0.700000,
+    1.500000,
+    0.390000,
+    0.400000,
+    0.000000,
+    1.000000,
+    0.680000,
+    "00AJI187"
+  ],
+  "-431692672": [
+    0.270000,
+    0.600000,
+    9.800000,
+    0.500000,
+    0.270000,
+    1.770000,
+    1.970000,
+    0.476000,
+    2.800000,
+    2.800000,
+    132.000000,
+    0.700000,
+    1.500000,
+    0.130000,
+    0.140000,
+    0.000000,
+    1.000000,
+    1.100000,
+    "46XHA494"
+  ],
   "-54332285": [
     0.240000,
     0.300000,
@@ -502,6 +565,27 @@
     0.700000,
     0.775000,
     "20PHI018"
+  ],
+  "-845961253": [
+    0.400000,
+    0.650000,
+    10.780001,
+    0.300000,
+    0.400000,
+    2.120000,
+    2.250000,
+    0.510000,
+    1.800000,
+    1.800000,
+    110.000000,
+    1.000000,
+    1.500000,
+    0.400000,
+    0.390000,
+    0.200000,
+    0.400000,
+    2.800000,
+    "22BRY195"
   ],
   "-994371320": [
     0.337500,
