--- a/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
+++ b/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
@@ -41,6 +41,27 @@
     0.900000,
     "46VBA527"
   ],
+  "-1193912403": [
+    0.338500,
+    0.825000,
+    10.780001,
+    0.650000,
+    0.338500,
+    2.174500,
+    2.435000,
+    0.482500,
+    5.800000,
+    5.800000,
+    149.750000,
+    1.000000,
+    1.500000,
+    0.170000,
+    0.200000,
+    0.480000,
+    1.000000,
+    0.947500,
+    "89RJR689"
+  ],
   "-120287622": [
     0.130000,
     0.250000,
@@ -356,6 +377,27 @@
     7.500000,
     "63WFL355"
   ],
+  "-2039755226": [
+    0.200000,
+    0.800000,
+    9.800000,
+    0.800000,
+    0.200000,
+    1.800000,
+    2.350000,
+    0.500000,
+    1.900000,
+    1.900000,
+    140.000000,
+    0.700000,
+    1.500000,
+    0.325000,
+    0.325000,
+    0.000000,
+    1.000000,
+    1.000000,
+    "84IOI641"
+  ],
   "-2096690334": [
     0.310000,
     0.600000,
@@ -376,6 +418,27 @@
     1.000000,
     1.050000,
     "20XTQ388"
+  ],
+  "-294678663": [
+    0.295000,
+    0.400000,
+    9.800000,
+    0.400000,
+    0.295000,
+    1.725000,
+    1.985000,
+    0.500000,
+    3.700000,
+    3.700000,
+    131.000000,
+    0.700000,
+    1.500000,
+    0.180000,
+    0.145000,
+    1.000000,
+    1.000000,
+    1.145000,
+    "63TZM306"
   ],
   "-391594584": [
     0.240000,
@@ -587,6 +650,27 @@
     2.800000,
     "22BRY195"
   ],
+  "-882629065": [
+    0.326400,
+    0.500000,
+    9.800000,
+    0.800000,
+    0.240000,
+    1.650000,
+    1.950000,
+    0.500000,
+    4.900000,
+    4.900000,
+    138.000000,
+    0.700000,
+    1.500000,
+    0.115000,
+    0.115000,
+    0.000000,
+    1.000000,
+    1.100000,
+    "09RFE233"
+  ],
   "-994371320": [
     0.337500,
     0.775000,
@@ -754,6 +838,27 @@
     1.000000,
     0.600000,
     "64QZE962"
+  ],
+  "117401876": [
+    0.270000,
+    0.550000,
+    9.800000,
+    0.400000,
+    0.270000,
+    1.900000,
+    2.100000,
+    0.485000,
+    1.500000,
+    1.500000,
+    125.000008,
+    0.700000,
+    1.500000,
+    0.200000,
+    0.130000,
+    0.000000,
+    0.800000,
+    1.020000,
+    "80PJL211"
   ],
   "1265391242": [
     0.315000,
@@ -1154,6 +1259,27 @@
     0.900000,
     "89YBN053"
   ],
+  "610429990": [
+    0.370000,
+    0.800000,
+    11.760000,
+    0.580000,
+    0.370000,
+    2.295000,
+    2.435000,
+    0.470000,
+    10.000000,
+    10.000000,
+    139.850006,
+    0.700000,
+    1.000000,
+    0.080000,
+    0.105000,
+    0.000000,
+    0.350000,
+    1.080000,
+    "64IJW014"
+  ],
   "699456151": [
     0.100000,
     0.300000,
@@ -1258,6 +1384,48 @@
     1.000000,
     0.830000,
     "86CMC621"
+  ],
+  "872704284": [
+    0.330000,
+    0.500000,
+    9.800000,
+    0.700000,
+    0.330000,
+    2.255000,
+    2.495000,
+    0.495000,
+    2.300000,
+    2.400000,
+    145.000000,
+    1.000000,
+    0.750000,
+    0.210000,
+    0.210000,
+    0.500000,
+    0.000000,
+    1.050000,
+    "66UGF496"
+  ],
+  "941800958": [
+    0.320000,
+    0.600000,
+    9.800000,
+    0.450000,
+    0.320000,
+    2.050000,
+    2.300000,
+    0.490000,
+    2.200000,
+    2.200000,
+    151.000000,
+    0.700000,
+    1.500000,
+    0.100000,
+    0.100000,
+    0.000000,
+    1.000000,
+    0.800000,
+    "24FAP847"
   ],
   "970598228": [
     0.260000,
