--- a/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
+++ b/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
@@ -20,6 +20,48 @@
     0.850000,
     "88XYL717"
   ],
+  "-1041692462": [
+    0.340000,
+    1.000000,
+    9.800000,
+    0.700000,
+    0.340000,
+    2.320000,
+    2.420000,
+    0.487000,
+    2.200000,
+    2.200000,
+    148.000015,
+    0.700000,
+    1.500000,
+    0.420000,
+    0.420000,
+    0.000000,
+    1.000000,
+    1.050000,
+    "61EVD484"
+  ],
+  "-1045541610": [
+    0.340000,
+    0.800000,
+    9.800000,
+    0.800000,
+    0.340000,
+    2.150000,
+    2.600000,
+    0.500000,
+    2.200000,
+    2.200000,
+    152.000000,
+    0.700000,
+    1.500000,
+    0.350000,
+    0.400000,
+    0.000000,
+    1.000000,
+    0.920000,
+    "00OFQ761"
+  ],
   "-1168952148": [
     0.320000,
     0.800000,
@@ -1153,6 +1195,27 @@
     0.600000,
     0.850000,
     "83NZS528"
+  ],
+  "2112052861": [
+    0.140000,
+    0.250000,
+    9.800000,
+    0.150000,
+    0.140000,
+    1.450000,
+    1.650000,
+    0.475000,
+    1.300000,
+    1.300000,
+    120.000008,
+    1.000000,
+    1.500000,
+    0.200000,
+    0.200000,
+    0.000000,
+    0.900000,
+    0.600000,
+    "40NVD217"
   ],
   "219613597": [
     0.240000,
