--- a/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
+++ b/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
@@ -482,6 +482,27 @@
     1.145000,
     "63TZM306"
   ],
+  "-313185164": [
+    0.377000,
+    1.200000,
+    9.800000,
+    0.500000,
+    0.377000,
+    2.620000,
+    2.705000,
+    0.475000,
+    7.000000,
+    6.000000,
+    161.000000,
+    0.700000,
+    1.500000,
+    0.340000,
+    0.300000,
+    0.000000,
+    1.000000,
+    1.010700,
+    "00YVF726"
+  ],
   "-391594584": [
     0.240000,
     0.900000,
@@ -1364,6 +1385,27 @@
     1.300000,
     "20MKG778"
   ],
+  "722226637": [
+    0.280000,
+    0.900000,
+    9.800000,
+    0.600000,
+    0.280000,
+    2.350000,
+    2.500000,
+    0.488000,
+    1.900000,
+    1.900000,
+    142.000000,
+    0.700000,
+    1.500000,
+    0.035000,
+    0.100000,
+    0.000000,
+    1.000000,
+    0.950000,
+    "62YHU002"
+  ],
   "734217681": [
     0.200000,
     0.600000,
@@ -1468,6 +1510,27 @@
     0.000000,
     1.050000,
     "66UGF496"
+  ],
+  "914654722": [
+    0.170000,
+    0.300000,
+    9.800000,
+    0.400000,
+    0.170000,
+    1.700000,
+    2.000000,
+    0.480000,
+    1.300000,
+    1.300000,
+    130.000015,
+    1.100000,
+    1.500000,
+    0.350000,
+    0.350000,
+    0.100000,
+    0.100000,
+    0.800000,
+    "21XIJ507"
   ],
   "941800958": [
     0.320000,
