--- a/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
+++ b/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
@@ -377,6 +377,27 @@
     1.000000,
     "1337420"
   ],
+  "-1903012613": [
+    0.200000,
+    0.900000,
+    9.800000,
+    0.600000,
+    0.200000,
+    2.200000,
+    2.500000,
+    0.480000,
+    2.000000,
+    2.000000,
+    145.000000,
+    0.700000,
+    1.500000,
+    0.290000,
+    0.300000,
+    0.000000,
+    1.000000,
+    0.800000,
+    "03KVZ467"
+  ],
   "-1933242328": [
     0.195000,
     0.320000,
@@ -1364,6 +1385,27 @@
     1.080000,
     "64IJW014"
   ],
+  "666166960": [
+    0.265000,
+    0.550000,
+    9.800000,
+    0.320000,
+    0.265000,
+    1.625000,
+    2.000000,
+    0.490000,
+    1.800000,
+    1.800000,
+    135.000000,
+    1.000000,
+    1.500000,
+    0.650000,
+    0.600000,
+    0.600000,
+    0.200000,
+    0.800000,
+    "08QGU994"
+  ],
   "699456151": [
     0.100000,
     0.300000,
@@ -1531,6 +1573,27 @@
     0.100000,
     0.800000,
     "21XIJ507"
+  ],
+  "941494461": [
+    0.330000,
+    1.000000,
+    9.800000,
+    0.800000,
+    0.330000,
+    1.800000,
+    2.100000,
+    0.475000,
+    2.500000,
+    2.500000,
+    152.000000,
+    0.700000,
+    1.500000,
+    0.500000,
+    0.500000,
+    0.000000,
+    1.000000,
+    0.900000,
+    "67BSL790"
   ],
   "941800958": [
     0.320000,
