added more banners

--- a/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
+++ b/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
@@ -272,6 +272,27 @@
     0.950000,
     "M4J3ST1C"
   ],
+  "-1651067813": [
+    0.200000,
+    0.800000,
+    9.800000,
+    0.600000,
+    0.200000,
+    2.050000,
+    2.250000,
+    0.485000,
+    1.600000,
+    1.600000,
+    140.000000,
+    1.000000,
+    1.500000,
+    0.250000,
+    0.250000,
+    0.600000,
+    0.800000,
+    0.750000,
+    "82FBG522"
+  ],
   "-1660945322": [
     0.340000,
     0.500000,
@@ -1300,6 +1321,27 @@
     1.000000,
     0.900000,
     "48OZG844"
+  ],
+  "37348240": [
+    0.300000,
+    0.430000,
+    9.800000,
+    0.450000,
+    0.300000,
+    1.650000,
+    1.850000,
+    0.490000,
+    2.300000,
+    2.300000,
+    140.000000,
+    1.000000,
+    1.400000,
+    0.050000,
+    0.050000,
+    0.000000,
+    0.000000,
+    1.000000,
+    "22AWE092"
   ],
   "408192225": [
     0.353000,
