--- a/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
+++ b/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
@@ -608,6 +608,27 @@
     1.200000,
     "66XLH250"
   ],
+  "-602287871": [
+    0.270000,
+    0.550000,
+    9.800000,
+    0.400000,
+    0.270000,
+    1.900000,
+    2.100000,
+    0.485000,
+    1.500000,
+    1.500000,
+    125.000008,
+    0.700000,
+    1.500000,
+    0.200000,
+    0.130000,
+    0.000000,
+    0.800000,
+    1.020000,
+    "0LDT1M3R"
+  ],
   "-670086588": [
     0.262200,
     0.485000,
