--- a/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
+++ b/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
@@ -608,6 +608,27 @@
     1.200000,
     "66XLH250"
   ],
+  "-566387422": [
+    0.330000,
+    0.500000,
+    9.800000,
+    0.600000,
+    0.330000,
+    2.500000,
+    2.700000,
+    0.500000,
+    2.200000,
+    2.200000,
+    152.000000,
+    1.000000,
+    1.500000,
+    0.150000,
+    0.150000,
+    0.300000,
+    1.000000,
+    0.950000,
+    "61BZB856"
+  ],
   "-602287871": [
     0.270000,
     0.550000,
@@ -985,6 +1006,27 @@
     0.800000,
     1.020000,
     "80PJL211"
+  ],
+  "121658888": [
+    0.110000,
+    0.250000,
+    9.800000,
+    0.300000,
+    0.110000,
+    1.350000,
+    1.550000,
+    0.460000,
+    1.300000,
+    1.300000,
+    100.000000,
+    1.000000,
+    1.500000,
+    0.400000,
+    0.400000,
+    0.000000,
+    1.000000,
+    0.600000,
+    "02RWW115"
   ],
   "1265391242": [
     0.315000,
@@ -1468,6 +1510,27 @@
     0.200000,
     0.800000,
     "08QGU994"
+  ],
+  "6774487": [
+    0.275000,
+    1.000000,
+    11.760000,
+    0.500000,
+    0.275000,
+    1.900000,
+    2.100000,
+    0.475000,
+    2.300000,
+    2.300000,
+    135.000000,
+    0.500000,
+    1.500000,
+    0.200000,
+    0.300000,
+    0.000000,
+    0.000000,
+    1.575000,
+    "87DRW663"
   ],
   "699456151": [
     0.100000,
