added save godmode status for favorited cars in the spawner

--- a/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
+++ b/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
@@ -650,6 +650,27 @@
     1.020000,
     "0LDT1M3R"
   ],
+  "-654498607": [
+    0.210000,
+    0.380000,
+    9.800000,
+    0.450000,
+    0.210000,
+    1.718000,
+    1.905000,
+    0.484500,
+    1.300000,
+    1.300000,
+    136.000000,
+    0.700000,
+    1.500000,
+    0.110000,
+    0.098000,
+    0.000000,
+    1.000000,
+    0.850000,
+    "03FIB586"
+  ],
   "-670086588": [
     0.262200,
     0.485000,
@@ -944,6 +965,27 @@
     0.800000,
     "67KIA785"
   ],
+  "1131912276": [
+    0.160000,
+    3.000000,
+    9.800000,
+    0.900000,
+    0.160000,
+    1.800000,
+    1.850000,
+    0.470000,
+    1.000000,
+    1.000000,
+    50.000000,
+    0.500000,
+    1.500000,
+    0.150000,
+    0.150000,
+    0.000000,
+    0.000000,
+    6.000000,
+    "40CIO440"
+  ],
   "1132262048": [
     0.160000,
     0.600000,
@@ -1027,6 +1069,27 @@
     1.000000,
     0.600000,
     "02RWW115"
+  ],
+  "1254014755": [
+    0.270000,
+    0.270000,
+    11.760000,
+    0.400000,
+    0.270000,
+    1.900000,
+    2.250000,
+    0.470000,
+    4.300000,
+    4.300000,
+    135.000000,
+    0.700000,
+    1.000000,
+    0.420000,
+    0.420000,
+    0.300000,
+    0.150000,
+    1.250000,
+    "83BVH842"
   ],
   "1265391242": [
     0.315000,
