--- a/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
+++ b/quads_toolbox_scripts/toolbox_data/KNOWN_BOOSTED_CARS.json
@@ -377,6 +377,27 @@
     1.175000,
     "24XQJ589"
   ],
+  "-1790546981": [
+    0.280000,
+    0.800000,
+    9.800000,
+    0.800000,
+    0.280000,
+    1.800000,
+    2.250000,
+    0.500000,
+    1.900000,
+    1.900000,
+    140.000000,
+    0.700000,
+    1.500000,
+    0.200000,
+    0.200000,
+    0.000000,
+    1.000000,
+    0.800000,
+    "64VAM319"
+  ],
   "-1890996696": [
     0.337500,
     0.600000,
