added native teleport, default boost amount as json setting, improved tp into vehicle

--- a/quads_toolbox_scripts/toolbox_data/SAVEDATA/PLAYERLIST_SETTINGS.json
+++ b/quads_toolbox_scripts/toolbox_data/SAVEDATA/PLAYERLIST_SETTINGS.json
@@ -1,4 +1,5 @@
 {
+  "defaultBoostStrength": 70,
   "defaultSortingMethod": 0,
   "disableModdersWarning": false,
   "disableSpectatorWarning": false,
