add license plate speedo as option, general refactorings (sleep times/reordering elements)

--- a/quads_toolbox_scripts/toolbox_data/SAVEDATA/PLAYERLIST_SETTINGS.json
+++ b/quads_toolbox_scripts/toolbox_data/SAVEDATA/PLAYERLIST_SETTINGS.json
@@ -3,5 +3,6 @@
   "defaultSortingMethod": 0,
   "disableModdersWarning": false,
   "disableSpectatorWarning": false,
+  "speedDisplaySelection": "Banner",
   "stringFormat": 0
 }
