Updated all globals for 3274, updated vehicles, updated Ped list and sorting

--- a/quads_toolbox_scripts/toolbox_data/SAVEDATA/KNOWN_BOOSTED_CARS.json
+++ b/quads_toolbox_scripts/toolbox_data/SAVEDATA/KNOWN_BOOSTED_CARS.json
@@ -1,1 +1,44 @@
-{}
+{
+  "-941272559": [
+    0.367400,
+    1.000000,
+    9.800000,
+    0.500000,
+    0.334000,
+    2.560000,
+    2.685000,
+    0.485000,
+    6.000000,
+    6.000000,
+    154.700012,
+    0.700000,
+    1.500000,
+    0.140000,
+    0.140000,
+    0.000000,
+    1.000000,
+    0.960000,
+    "47QCP041"
+  ],
+  "2067820283": [
+    0.408100,
+    1.200000,
+    9.800000,
+    0.500000,
+    0.371000,
+    2.560000,
+    2.685000,
+    0.465000,
+    7.000000,
+    6.000000,
+    161.000000,
+    0.700000,
+    1.500000,
+    0.340000,
+    0.300000,
+    0.000000,
+    1.000000,
+    1.030700,
+    "04BQZ998"
+  ]
+}
