--- a/.github/workflows/NewRelease.yml
+++ b/.github/workflows/NewRelease.yml
@@ -30,6 +30,8 @@ jobs:
           prerelease: false
           body: |
             This release includes the full contents of the repository.
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Zip Archive to Release
         uses: actions/upload-release-asset@v1
