--- a/.github/workflows/NewRelease.yml
+++ b/.github/workflows/NewRelease.yml
@@ -31,7 +31,7 @@ jobs:
           body: |
             This release includes the full contents of the repository.
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
 
       - name: Upload Zip Archive to Release
         uses: actions/upload-release-asset@v1
