--- a/.github/workflows/NewRelease.yml
+++ b/.github/workflows/NewRelease.yml
@@ -24,13 +24,14 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         with:
-          github-token:: ${{ secrets.RELEASE_TOKEN }}
           tag_name: ${{ github.event.inputs.version }}
           release_name: Release ${{ github.event.inputs.version }}
           draft: false
           prerelease: false
           body: |
             This release includes the full contents of the repository.
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
 
       - name: Upload Zip Archive to Release
         uses: actions/upload-release-asset@v1
