--- a/.github/workflows/NewRelease.yml
+++ b/.github/workflows/NewRelease.yml
@@ -40,3 +40,5 @@ jobs:
           asset_path: quads-modest-toolbox-${{ github.event.inputs.version }}.zip
           asset_name: quads-modest-toolbox-${{ github.event.inputs.version }}.zip
           asset_content_type: application/zip
+        env:  
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
