--- a/.github/workflows/NewRelease.yml
+++ b/.github/workflows/NewRelease.yml
@@ -40,6 +40,7 @@ jobs:
         run: |
           commits=$(git log ${{ steps.get_previous_tag.outputs.tag }}..HEAD --pretty=format:"* %s")
           echo "commit_messages=$commits" >> $GITHUB_ENV
+          echo "commit_messages=$commits"
 
       - name: Create Release
         id: create_release
