--- a/.github/workflows/NewRelease.yml
+++ b/.github/workflows/NewRelease.yml
@@ -24,13 +24,6 @@ jobs:
         run: |
           zip -r quads-modest-toolbox-${{ github.event.inputs.version }}.zip . -x ".git/*" ".github/*"
 
-      - name: Create Git Tag
-        run: |
-          git tag ${{ github.event.inputs.version }}
-          git push origin ${{ github.event.inputs.version }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-
       - name: Get Previous Tag
         id: get_previous_tag
         run: echo "::set-output name=tag::$(git describe --tags --abbrev=0 HEAD^)"
@@ -42,29 +35,29 @@ jobs:
           echo "commit_messages=$commits" >> $GITHUB_ENV
           echo "commit_messages=$commits"
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        with:
-          tag_name: ${{ github.event.inputs.version }}
-          release_name: Release ${{ github.event.inputs.version }}
-          draft: false
-          prerelease: false
-          body: |
-            Changes in this release:
-            ${{ env.commit_messages }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      # - name: Create Release
+      #   id: create_release
+      #   uses: actions/create-release@v1
+      #   with:
+      #     tag_name: ${{ github.event.inputs.version }}
+      #     release_name: Release ${{ github.event.inputs.version }}
+      #     draft: false
+      #     prerelease: false
+      #     body: |
+      #       Changes in this release:
+      #       ${{ env.commit_messages }}
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
 
-      - name: Upload Zip Archive to Release
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: quads-modest-toolbox-${{ github.event.inputs.version }}.zip
-          asset_name: quads-modest-toolbox-${{ github.event.inputs.version }}.zip
-          asset_content_type: application/zip
-        env:  
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      # - name: Upload Zip Archive to Release
+      #   uses: actions/upload-release-asset@v1
+      #   with:
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #     asset_path: quads-modest-toolbox-${{ github.event.inputs.version }}.zip
+      #     asset_name: quads-modest-toolbox-${{ github.event.inputs.version }}.zip
+      #     asset_content_type: application/zip
+      #   env:  
+      #     GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
           
-      - name: Print Release URL
-        run: echo ${{ steps.create_release.outputs.html_url }}
+      # - name: Print Release URL
+      #   run: echo ${{ steps.create_release.outputs.html_url }}
