--- a/.github/workflows/NewRelease.yml
+++ b/.github/workflows/NewRelease.yml
@@ -34,8 +34,9 @@ jobs:
         id: get_commit_messages
         run: |
           commits=$(git log ${{ env.last_tag }}..HEAD --pretty=format:"* %s")
-          echo "commit_messages=$commits" >> $GITHUB_ENV
-
+          echo "$commits" > commit_messages.txt
+          echo "$commits"
+          
       # - name: Create Release
       #   id: create_release
       #   uses: actions/create-release@v1
@@ -46,10 +47,10 @@ jobs:
       #     prerelease: false
       #     body: |
       #       Changes in this release:
-      #       ${{ env.commit_messages }}
+      #       $(cat commit_messages.txt)
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-
+          
       # - name: Upload Zip Archive to Release
       #   uses: actions/upload-release-asset@v1
       #   with:
