--- a/.github/workflows/NewRelease.yml
+++ b/.github/workflows/NewRelease.yml
@@ -35,31 +35,30 @@ jobs:
         run: |
           commits=$(git log ${{ env.last_tag }}..HEAD --pretty=format:"* %s")
           echo "$commits" > commit_messages.txt
-          echo "$commits"
           
-      # - name: Create Release
-      #   id: create_release
-      #   uses: actions/create-release@v1
-      #   with:
-      #     tag_name: ${{ github.event.inputs.version }}
-      #     release_name: Release ${{ github.event.inputs.version }}
-      #     draft: false
-      #     prerelease: false
-      #     body: |
-      #       Changes in this release:
-      #       $(cat commit_messages.txt)
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        with:
+          tag_name: ${{ github.event.inputs.version }}
+          release_name: Release ${{ github.event.inputs.version }}
+          draft: false
+          prerelease: false
+          body: |
+            Changes in this release:
+            $(cat commit_messages.txt)
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
           
-      # - name: Upload Zip Archive to Release
-      #   uses: actions/upload-release-asset@v1
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
-      #     asset_path: quads-modest-toolbox-${{ github.event.inputs.version }}.zip
-      #     asset_name: quads-modest-toolbox-${{ github.event.inputs.version }}.zip
-      #     asset_content_type: application/zip
-      #   env:  
-      #     GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      - name: Upload Zip Archive to Release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: quads-modest-toolbox-${{ github.event.inputs.version }}.zip
+          asset_name: quads-modest-toolbox-${{ github.event.inputs.version }}.zip
+          asset_content_type: application/zip
+        env:  
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
           
-      # - name: Print Release URL
-      #   run: echo ${{ steps.create_release.outputs.html_url }}
+      - name: Print Release URL
+        run: echo ${{ steps.create_release.outputs.html_url }}
