new format for speedometer

--- a/quads_toolbox_scripts/toolbox_data/SAVEDATA/PLAYERLIST_SETTINGS.json
+++ b/quads_toolbox_scripts/toolbox_data/SAVEDATA/PLAYERLIST_SETTINGS.json
@@ -4,6 +4,6 @@
   "disableModdersWarning": false,
   "disableSpectatorWarning": false,
   "pedChangerSleepTimeout": 0.020000,
-  "speedDisplaySelection": "License Plate",
+  "speedDisplaySelection": 1,
   "stringFormat": 0
 }
