add playerlist lua cleanup

--- a/.github/workflows/NewRelease.yml
+++ b/.github/workflows/NewRelease.yml
@@ -18,6 +18,10 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Clean up playerlist lua
+        run: |
+          sed -i 's/ply\:get\_config\_flag\(420\)/d' quads_toolbox_scripts/
+
       - name: Create Zip Archive of all script files
         run: |
           zip -r quads-modest-toolbox-${{ github.event.inputs.version }}.zip . -x ".git/*" ".github/*"
